SFUSA/force-app/main/default/objects/SurveyInvitation/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created lookup with case to use on email templates for survey.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </CustomField>