SFUSA/force-app/main/default/objects/SurveyInvitation/fields/Case_Description__c.field-meta.xml
<CustomField>
        <fullName>Case_Description__c</fullName>
        <description>Created for using in email template sent to customer for survey</description>
        <label>Case Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </CustomField>