SFUSA/force-app/main/default/objects/SurveyInvitation/fields/Contact__c.field-meta.xml
<CustomField>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </CustomField>