SFUSA/force-app/main/default/objects/SurveyInvitation/fields/Email__c.field-meta.xml
<CustomField>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </CustomField>